@@ -1,4 +1,8 @@
 master
+- Zixaphir
+  Removed Quote Threading and Markdown
+  -- I didn't want to, but both are broken and I can't fix them right now.
+     Might bring them back when I can.
 
 0.9.2beta
 - Zixaphir
